--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "prettier": "^3.3.3",
     "typescript": "^5.6.3",
     "vitest": "^2.1.4",
-    "prettier": "^3.3.3"
+    "@types/node": "20.17.6"
+  },
+  "dependencies": {
+    "fast-xml-parser": "^4.5.0"
   }
 }
